tests/tables/fails/parser/unexpected_tokens5.tbl
# error: unexpected_tokens5.tbl(4,23): Expected ), got '|'. Did you mean '||'?
# table foo = inherit(a | b)
#                       ^
table foo = inherit(a | b)
